executable('qvmfs-server', ['sftp-common.c', 'sftp-server.c', 'sftp-server-main.c', 'xmalloc.c', 'sshbuf.c', 'ssherr.c',  'log.c', 'misc.c', 'match.c', 'sshbuf-getput-basic.c', 'fatal.c', 'sftp-realpath.c', 'sshbuf-misc.c', 'platform-misc.c', 'addrmatch.c', 'addr.c', 
'openbsd-compat/freezero.c', 'openbsd-compat/strlcpy.c', 'openbsd-compat/strmode.c', 'openbsd-compat/strlcat.c', 'openbsd-compat/strtonum.c', 'openbsd-compat/pwcache.c', 'openbsd-compat/fmt_scaled.c', 'openbsd-compat/bsd-misc.c', 'openbsd-compat/recallocarray.c', 'openbsd-compat/bsd-closefrom.c', 'openbsd-compat/vis.c', 'openbsd-compat/port-net.c', 'openbsd-compat/timingsafe_bcmp.c'])